--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
       </div>
     </nav>
     <!-- End Bar -->
+
+    <!-- Body Text-->
     <h1>Amy Vargas</h1>
 
 
+    <!-- End Body Text -->
 
-
-
-
-
-
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
