Creating additional pages

--- a/projects.html
+++ b/projects.html
@@ -19,22 +19,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about_me.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
-          </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about_me.html">About Me</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="projects.html">Projects</a>
+            </li>
         </ul>
       </div>
     </nav>
     <!-- End Bar -->
 
     <!-- Body Text-->
-    <h1>Amy Vargas</h1>
+    <h1>Projects</h1>
 
 
     <!-- End Body Text -->
