Updating Index Page with Images

--- a/index.html
+++ b/index.html
@@ -34,12 +34,40 @@
     <!-- End Bar -->
 
     <!-- Body Text-->
-    <h1>Amy Vargas</h1>
+    <h1 class="text-center">Amy Vargas</h1>
+    <p class="text-center"> Programmer, Designer, 3D Modeler </p>
+    <br>
 
+    <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
+    <!-- Image Boxes -->
+    <div class="d-flex justify-content-center" >
+      <img src="images/pexels-garrett-morrow-682933.jpg" alt="Game Design Image" class="img-thumbnail">
+      <p> Game Design </p>
+    </div>
+
+    <div>
+      <p> 3D Modeling </p>
+    </div>
+
+    <div>
+      <p> Graphic Design </p>
+    </div>
+
+    <!-- End Image Boxes-->
+
+    <hr>
+    <!-- Footer Box-->
+    <footer> 
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <p> Made using HTML, CSS, and Bootstrap</p>
+        <!-- FIX: Use JS to display the current year date-->
+        <p> © 2023 </p>
+      </div>    
+    </footer>
+    <!-- End Footer Box-->
 
     <!-- End Body Text -->
 
-    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
