--- a/projects.html
+++ b/projects.html
@@ -34,12 +34,17 @@
     <!-- End Bar -->
 
     <!-- Body Text-->
-    <h1>Projects</h1>
+    <h1 class="text-center">Projects</h1>
 
-
+    <hr>
+    <footer> 
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <p> Made using HTML, CSS, and Bootstrap</p>
+        <p> © 2023 </p>
+      </div>    
+    </footer>
     <!-- End Body Text -->
 
-    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
