--- a/about_me.html
+++ b/about_me.html
@@ -19,27 +19,32 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about_me.html">About Me</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
-            </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about_me.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
         </ul>
       </div>
     </nav>
     <!-- End Bar -->
 
     <!-- Body Text-->
-    <h1>About Me</h1>
+    <h1 class="text-center">About Me</h1>
 
-
+    <hr>
+    <footer> 
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <p> Made using HTML, CSS, and Bootstrap</p>
+        <p> © 2023 </p>
+      </div>    
+    </footer>
     <!-- End Body Text -->
 
-    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
