Adjusting image placement and size

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
     <!-- Image Boxes -->
     <div class="d-flex justify-content-center" >
-      <img src="images/pexels-garrett-morrow-682933.jpg" alt="Game Design Image" class="img-thumbnail">
+      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image">
       <p> Game Design </p>
     </div>
 
