Hover Ability on Image

--- a/index.html
+++ b/index.html
@@ -41,8 +41,23 @@
     <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
     <!-- Image Boxes -->
     <div class="d-flex justify-content-center" >
-      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image">
+      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236">
       <p> Game Design </p>
+    </div>
+
+    <div class="bg-image hover-overlay">
+      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236">
+      <div
+        class="mask"
+        style="
+          background: linear-gradient(
+            45deg,
+            hsla(168, 85%, 52%, 0.5),
+            hsla(263, 88%, 45%, 0.5) 100%
+          );
+        "
+      >
+      </div>
     </div>
 
     <div>
