Adjusting Image Locations

--- a/index.html
+++ b/index.html
@@ -39,33 +39,30 @@
     <br>
 
     <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
+
     <!-- Image Boxes -->
     <div class="d-flex justify-content-center" >
-      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236">
-      <p> Game Design </p>
-    </div>
-
-    <div class="bg-image hover-overlay">
-      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236">
-      <div
-        class="mask"
-        style="
-          background: linear-gradient(
-            45deg,
-            hsla(168, 85%, 52%, 0.5),
-            hsla(263, 88%, 45%, 0.5) 100%
-          );
-        "
-      >
-      </div>
+      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" href="projects.html" width="304" height="236">
     </div>
 
     <div>
-      <p> 3D Modeling </p>
+      <p class="text-center"> Game Design </p>
+    </div>
+
+    <div class="d-flex justify-content-center" >
+      <img src="images/" class="img-thumbnail" alt="3D Modeling Image" href="projects.html" width="304" height="236">
     </div>
 
     <div>
-      <p> Graphic Design </p>
+      <p class="text-center"> 3D Modeling </p>
+    </div>
+
+    <div class="d-flex justify-content-center" >
+      <img src="images/" class="img-thumbnail" alt="Graphic Design Image" href="projects.html" width="304" height="236">
+    </div>
+
+    <div>
+      <p class="text-center"> Graphic Design </p>
     </div>
 
     <!-- End Image Boxes-->
