--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Image Boxes -->
     <div class="d-flex justify-content-center" >
-      <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" href="projects.html" width="304" height="236">
+      <a href = "projects.html"> <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236"> </a>
     </div>
 
     <div>
@@ -50,7 +50,7 @@
     </div>
 
     <div class="d-flex justify-content-center" >
-      <img src="images/" class="img-thumbnail" alt="3D Modeling Image" href="projects.html" width="304" height="236">
+      <a href = "projects.html"> <img src="images/" class="img-thumbnail" alt="3D Modeling Image" width="304" height="236"> </a>
     </div>
 
     <div>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="d-flex justify-content-center" >
-      <img src="images/" class="img-thumbnail" alt="Graphic Design Image" href="projects.html" width="304" height="236">
+      <a href = "projects.html"> <img src="images/" class="img-thumbnail" alt="Graphic Design Image" width="304" height="236"> </a>
     </div>
 
     <div>
