Adding more pictures and pages

--- a/about_me.html
+++ b/about_me.html
@@ -25,8 +25,16 @@
           <li class="nav-item">
             <a class="nav-link" href="about_me.html">About Me</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
+              <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
+              <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
+              <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
+            </div>
           </li>
         </ul>
       </div>
