--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
           <li class="nav-item">
             <a class="nav-link" href="about_me.html">About Me</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
+              <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
+              <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
+              <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -41,24 +49,37 @@
     <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
 
     <!-- Image Boxes -->
+
+    <!-- Programming -->
     <div class="d-flex justify-content-center" >
-      <a href = "projects.html"> <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236"> </a>
+      <a href = "projects_pages/programming_projects.html"> <img src="images/pexels-pixabay-270348.jpg" class="img-thumbnail" alt="Programming Image" width="304" height="236"> </a>
+    </div>
+    
+    <div>
+      <p class="text-center"> Programming </p>
+    </div>
+
+    <!-- Game Design -->
+    <div class="d-flex justify-content-center" >
+      <a href = "projects_pages/game_design.html"> <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236"> </a>
     </div>
 
     <div>
       <p class="text-center"> Game Design </p>
     </div>
 
+    <!-- 3D Modeling -->
     <div class="d-flex justify-content-center" >
-      <a href = "projects.html"> <img src="images/" class="img-thumbnail" alt="3D Modeling Image" width="304" height="236"> </a>
+      <a href = "projects_pages/3d_modeling.html"> <img src="images/Autodesk_Maya.png" class="img-thumbnail" alt="3D Modeling Image" width="304" height="236"> </a>
     </div>
 
     <div>
       <p class="text-center"> 3D Modeling </p>
     </div>
 
+    <!-- Graphic Design -->
     <div class="d-flex justify-content-center" >
-      <a href = "projects.html"> <img src="images/" class="img-thumbnail" alt="Graphic Design Image" width="304" height="236"> </a>
+      <a href = "projects_pages/graphic_design.html"> <img src="images/pexels-polina-zimmerman-3747279.jpg" class="img-thumbnail" alt="Graphic Design Image" width="304" height="236"> </a>
     </div>
 
     <div>
