Updating Nav Bar Links

--- a/projects_pages/graphic_design.html
+++ b/projects_pages/graphic_design.html
@@ -13,33 +13,33 @@
   <body>
     <!-- Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Amy Vargas</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about_me.html">About Me</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Projects
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
-                <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
-                <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
-                <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- End Bar -->
+      <a class="navbar-brand" href="index.html">Amy Vargas</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../about_me.html">About Me</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="../projects.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="programming_projects.html">Programming</a>
+              <a class="dropdown-item" href="game_design.html">Game Design</a>
+              <a class="dropdown-item" href="3d_modeling.html">3D Modeling</a>
+              <a class="dropdown-item" href="graphic_design.html">Graphic Design</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- End Bar -->
 
     <!-- Body Text-->
     <h1 class="text-center"> Graphic Design </h1>
