Updating About Me page

--- a/about_me.html
+++ b/about_me.html
@@ -44,6 +44,37 @@
     <!-- Body Text-->
     <h1 class="text-center">About Me</h1>
 
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="col-md-8 mx-auto">
+            <h3> Image </h3>
+          </div>
+        </div>
+        <div class = "col">
+          <div class="col-md-8 mx-auto">
+            <h2> Personal Statement </h2>
+          </div>
+          <div>
+            <p> 
+              Hello there!
+            </p>
+            <p>
+              My name is Amy, and I am a programmer, designer, and 3D modeler seeking opportunities to utilize my multidisciplinary skill set.
+            </p>
+            <p>
+              I will be graduating with a B.A. in Interactive Multimedia with a focus in Animation and Design from The College of New Jersey. I will also be obtaining minors in Computer Science and Music Technology.
+            </p>
+            <p>
+              My skills include 3D modeling, software and game development, video editing, photo restoration/retouching, and graphic design.
+            </p>
+            <p>
+              I am interested in the field of animation as well as other areas, such as graphic design, VR/AR design, video editing, and photo restoration/retouching.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <hr>
     <footer> 
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
