Testing SM Location again

--- a/about_me.html
+++ b/about_me.html
@@ -87,25 +87,25 @@
     <div class="container">
       <div class="row">
         <!-- Email -->
-        <div class="col">
+        <div class="col-md-auto">
           <a class="fa-solid fa-envelope" href="mailto:avarg610@gmail.com" role="button">
           </a>
         </div>
 
         <!-- Linkedin -->
-        <div class="col">
+        <div class="col-md-auto">
           <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/vargas-amy/" role="button">
           </a>
         </div>
         
         <!-- Github -->
-        <div class="col">
+        <div class="col-md-auto">
           <a class="fa-brands fa-github" href="https://github.com/A-Vargas-GP" role="button">
           </a>
         </div>
           
         <!-- Artstation -->
-        <div class="col">
+        <div class="col-md-auto">
           <a class="fa-brands fa-artstation" href="https://www.artstation.com/vargas-a9" role="button">
           </a>
         </div>
