--- a/about_me.html
+++ b/about_me.html
@@ -85,7 +85,7 @@
 
     <!-- Social Media Section -->
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-md-center">
         <!-- Email -->
         <div class="col-md-auto">
           <a class="fa-solid fa-envelope" href="mailto:avarg610@gmail.com" role="button">
