Changing SM Icon Colors

--- a/about_me.html
+++ b/about_me.html
@@ -88,25 +88,25 @@
       <div class="row justify-content-md-center">
         <!-- Email -->
         <div class="col-md-auto">
-          <a class="fa-solid fa-envelope" href="mailto:avarg610@gmail.com" role="button">
+          <a class="fa-solid fa-envelope" href="mailto:avarg610@gmail.com" style="color:#000000;" role="button">
           </a>
         </div>
 
         <!-- Linkedin -->
         <div class="col-md-auto">
-          <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/vargas-amy/" role="button">
+          <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/vargas-amy/" style="color:#000000;" role="button">
           </a>
         </div>
         
         <!-- Github -->
         <div class="col-md-auto">
-          <a class="fa-brands fa-github" href="https://github.com/A-Vargas-GP" role="button">
+          <a class="fa-brands fa-github" href="https://github.com/A-Vargas-GP" style="color:#000000;" role="button">
           </a>
         </div>
           
         <!-- Artstation -->
         <div class="col-md-auto">
-          <a class="fa-brands fa-artstation" href="https://www.artstation.com/vargas-a9" role="button">
+          <a class="fa-brands fa-artstation" href="https://www.artstation.com/vargas-a9" style="color:#000000;" role="button">
           </a>
         </div>
 
