--- a/about_me.html
+++ b/about_me.html
@@ -1,134 +1,152 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Icon library -->
-    <script src="https://kit.fontawesome.com/3930628afb.js" crossorigin="anonymous"></script>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <!-- Icon library -->
+  <script src="https://kit.fontawesome.com/3930628afb.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Amy's Personal Website</title>
-  </head>
-  <body>
-    <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Amy Vargas</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about_me.html">About Me</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Projects
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
-              <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
-              <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
-              <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- End Bar -->
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Body Text-->
-    <h1 class="text-center">About Me</h1>
+  <title>Amy's Personal Website</title>
+</head>
 
-    <div class="container">
-      <div class="row">
-        <!-- Personal Image Flex Box -->
-        <div class="col">
-          <div class="col-md-8 mx-auto">
-            <h3> Image </h3>
+<body>
+  <!-- Navigation Bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">Amy Vargas</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about_me.html">About Me</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Projects
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
+            <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
+            <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
+            <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
           </div>
-        </div>
-        <!-- End Flex Box 1 -->
-        <!-- Personal Statement Flex Box -->
-        <div class = "col">
-          <div class="col-md-8 mx-auto">
-            <h2> Personal Statement </h2>
-          </div>
-          <div>
-            <p> 
-              Hello there!
-            </p>
-            <p>
-              My name is Amy, and I am a programmer, designer, and 3D modeler seeking opportunities to utilize my multidisciplinary skill set.
-            </p>
-            <p>
-              I will be graduating with a B.A. in Interactive Multimedia with a focus in Animation and Design from The College of New Jersey. I will also be obtaining minors in Computer Science and Music Technology.
-            </p>
-            <p>
-              My skills include 3D modeling, software and game development, video editing, photo restoration/retouching, and graphic design.
-            </p>
-            <p>
-              I am interested in the field of animation as well as other areas, such as graphic design, VR/AR design, video editing, and photo restoration/retouching.
-            </p>
-          </div>
-        </div>
-        <!-- End Flex Box 2 -->
-      </div>
+        </li>
+      </ul>
     </div>
+  </nav>
+  <!-- End Bar -->
 
-    <!-- Social Media Section -->
-    <div class="container">
-      <div class="row justify-content-md-center">
-        <!-- Email -->
-        <div class="col-md-auto">
-          <a class="fa-solid fa-envelope" href="mailto:avarg610@gmail.com" style="color:#000000;" role="button">
-          </a>
-        </div>
+  <!-- Body Text-->
+  <h1 class="text-center">About Me</h1>
 
-        <!-- Linkedin -->
-        <div class="col-md-auto">
-          <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/vargas-amy/" style="color:#000000;" role="button">
-          </a>
+  <div class="container">
+    <div class="row">
+      <!-- Personal Image Flex Box -->
+      <div class="col">
+        <div class="col-md-8 mx-auto">
+          <h3> Image </h3>
         </div>
-        
-        <!-- Github -->
-        <div class="col-md-auto">
-          <a class="fa-brands fa-github" href="https://github.com/A-Vargas-GP" style="color:#000000;" role="button">
-          </a>
+      </div>
+      <!-- End Flex Box 1 -->
+      <!-- Personal Statement Flex Box -->
+      <div class="col">
+        <div class="col-md-8 mx-auto">
+          <h2> Personal Statement </h2>
         </div>
-          
-        <!-- Artstation -->
-        <div class="col-md-auto">
-          <a class="fa-brands fa-artstation" href="https://www.artstation.com/vargas-a9" style="color:#000000;" role="button">
-          </a>
+        <div>
+          <p>
+            Hello there!
+          </p>
+          <p>
+            My name is Amy, and I am a programmer, designer, and 3D modeler seeking opportunities to utilize my
+            multidisciplinary skill set.
+          </p>
+          <p>
+            I will be graduating with a B.A. in Interactive Multimedia with a focus in Animation and Design from The
+            College of New Jersey. I will also be obtaining minors in Computer Science and Music Technology.
+          </p>
+          <p>
+            My skills include 3D modeling, software and game development, video editing, photo restoration/retouching,
+            and graphic design.
+          </p>
+          <p>
+            I am interested in the field of animation as well as other areas, such as graphic design, VR/AR design,
+            video editing, and photo restoration/retouching.
+          </p>
         </div>
+      </div>
+      <!-- End Flex Box 2 -->
+    </div>
+  </div>
 
-          <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+  <!-- Social Media Section -->
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <!-- Email -->
+      <div class="col-md-auto">
+        <a class="fa-solid fa-envelope" href="mailto:avarg610@gmail.com" style="color:#000000;" role="button">
+        </a>
+      </div>
+
+      <!-- Linkedin -->
+      <div class="col-md-auto">
+        <a class="fa-brands fa-linkedin" href="https://www.linkedin.com/in/vargas-amy/" style="color:#000000;"
+          role="button">
+        </a>
+      </div>
+
+      <!-- Github -->
+      <div class="col-md-auto">
+        <a class="fa-brands fa-github" href="https://github.com/A-Vargas-GP" style="color:#000000;" role="button">
+        </a>
+      </div>
+
+      <!-- Artstation -->
+      <div class="col-md-auto">
+        <a class="fa-brands fa-artstation" href="https://www.artstation.com/vargas-a9" style="color:#000000;"
+          role="button">
+        </a>
+      </div>
+
+      <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
             <i class="fab fa-github"></i>
           </a> -->
-      </div>
     </div>
-    <!-- End Social Media Section-->
-    <hr>
-    <footer> 
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        <p> Made using HTML, CSS, and Bootstrap</p>
-        <p> © 2023 </p>
-      </div>    
-    </footer>
-    <!-- End Body Text -->
+  </div>
+  <!-- End Social Media Section-->
+  <hr>
+  <footer>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      <p> Made using HTML, CSS, and Bootstrap</p>
+      <p> © 2023 </p>
+    </div>
+  </footer>
+  <!-- End Body Text -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
