--- a/index.html
+++ b/index.html
@@ -1,110 +1,126 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Amy's Personal Website</title>
-  </head>
-  <body>
-    <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Amy Vargas</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about_me.html">About Me</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Projects
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
-              <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
-              <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
-              <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- End Bar -->
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Body Text-->
-    <h1 class="text-center">Amy Vargas</h1>
-    <p class="text-center"> Programmer, Designer, 3D Modeler </p>
-    <br>
+  <title>Amy's Personal Website</title>
+</head>
 
-    <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
-
-    <!-- Image Boxes -->
-
-    <!-- Programming -->
-    <div class="d-flex justify-content-center" >
-      <a href = "projects_pages/programming_projects.html"> <img src="images/pexels-pixabay-270348.jpg" class="img-thumbnail" alt="Programming Image" width="304" height="236"> </a>
+<body>
+  <!-- Navigation Bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">Amy Vargas</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about_me.html">About Me</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Projects
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="projects_pages/programming_projects.html">Programming</a>
+            <a class="dropdown-item" href="projects_pages/game_design.html">Game Design</a>
+            <a class="dropdown-item" href="projects_pages/3d_modeling.html">3D Modeling</a>
+            <a class="dropdown-item" href="projects_pages/graphic_design.html">Graphic Design</a>
+          </div>
+        </li>
+      </ul>
     </div>
-    
-    <div>
-      <p class="text-center"> Programming </p>
+  </nav>
+  <!-- End Bar -->
+
+  <!-- Body Text-->
+  <h1 class="text-center">Amy Vargas</h1>
+  <p class="text-center"> Programmer, Designer, 3D Modeler </p>
+  <br>
+
+  <p class="text-center"> This site is a work in progress. Feel free to have a look around!</p>
+
+  <!-- Image Boxes -->
+
+  <!-- Programming -->
+  <div class="d-flex justify-content-center">
+    <a href="projects_pages/programming_projects.html"> <img src="images/pexels-pixabay-270348.jpg"
+        class="img-thumbnail" alt="Programming Image" width="304" height="236"> </a>
+  </div>
+
+  <div>
+    <p class="text-center"> Programming </p>
+  </div>
+
+  <!-- Game Design -->
+  <div class="d-flex justify-content-center">
+    <a href="projects_pages/game_design.html"> <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail"
+        alt="Game Design Image" width="304" height="236"> </a>
+  </div>
+
+  <div>
+    <p class="text-center"> Game Design </p>
+  </div>
+
+  <!-- 3D Modeling -->
+  <div class="d-flex justify-content-center">
+    <a href="projects_pages/3d_modeling.html"> <img src="images/Autodesk_Maya.png" class="img-thumbnail"
+        alt="3D Modeling Image" width="304" height="236"> </a>
+  </div>
+
+  <div>
+    <p class="text-center"> 3D Modeling </p>
+  </div>
+
+  <!-- Graphic Design -->
+  <div class="d-flex justify-content-center">
+    <a href="projects_pages/graphic_design.html"> <img src="images/pexels-polina-zimmerman-3747279.jpg"
+        class="img-thumbnail" alt="Graphic Design Image" width="304" height="236"> </a>
+  </div>
+
+  <div>
+    <p class="text-center"> Graphic Design </p>
+  </div>
+
+  <!-- End Image Boxes-->
+
+  <hr>
+  <!-- Footer Box-->
+  <footer>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      <p> Made using HTML, CSS, and Bootstrap</p>
+      <!-- FIX: Use JS to display the current year date-->
+      <p> © 2023 </p>
     </div>
+  </footer>
+  <!-- End Footer Box-->
 
-    <!-- Game Design -->
-    <div class="d-flex justify-content-center" >
-      <a href = "projects_pages/game_design.html"> <img src="images/pexels-garrett-morrow-682933.jpg" class="img-thumbnail" alt="Game Design Image" width="304" height="236"> </a>
-    </div>
+  <!-- End Body Text -->
 
-    <div>
-      <p class="text-center"> Game Design </p>
-    </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</body>
 
-    <!-- 3D Modeling -->
-    <div class="d-flex justify-content-center" >
-      <a href = "projects_pages/3d_modeling.html"> <img src="images/Autodesk_Maya.png" class="img-thumbnail" alt="3D Modeling Image" width="304" height="236"> </a>
-    </div>
-
-    <div>
-      <p class="text-center"> 3D Modeling </p>
-    </div>
-
-    <!-- Graphic Design -->
-    <div class="d-flex justify-content-center" >
-      <a href = "projects_pages/graphic_design.html"> <img src="images/pexels-polina-zimmerman-3747279.jpg" class="img-thumbnail" alt="Graphic Design Image" width="304" height="236"> </a>
-    </div>
-
-    <div>
-      <p class="text-center"> Graphic Design </p>
-    </div>
-
-    <!-- End Image Boxes-->
-
-    <hr>
-    <!-- Footer Box-->
-    <footer> 
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        <p> Made using HTML, CSS, and Bootstrap</p>
-        <!-- FIX: Use JS to display the current year date-->
-        <p> © 2023 </p>
-      </div>    
-    </footer>
-    <!-- End Footer Box-->
-
-    <!-- End Body Text -->
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
 </html>
