Changing main page

--- a/about_me.html
+++ b/about_me.html
@@ -41,7 +41,7 @@
           </li>
         </ul>
         </div>
-      <input type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-size="sm">
+      <input type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
     </nav>
     <!-- End Bar -->
 
