--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -8,6 +8,9 @@
     <!-- CSS Stylesheet-->
     <link href = "CSS/stylesheet.css" type = "text/css" rel = "stylesheet">
 
+    <!-- Javascript Script-->
+    <script src="Javascript/dark-light.js"></script>
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -39,7 +42,7 @@
           </li>
         </ul>
       </div>
-      <input type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-size="sm">
+      <input id = "toggleBtn" type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
     </nav>
     <!-- End Bar -->
     
