--- a/index.html
+++ b/index.html
@@ -12,21 +12,6 @@
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 
     <title>Amy's Personal Website</title>
-
-    <script>
-      function showDiv(name) {
-        var curr_div = document.getElementById(name);
-        
-        if (curr_div.style.display === "none") 
-        {
-          curr_div.style.display = "block";
-        } 
-        else 
-        {
-          curr_div.style.display = "none";
-        }
-      }
-    </script>
   </head>
   <body>
     <!-- Navigation Bar-->
@@ -47,12 +32,9 @@
           <li class = "nav-item">
             <a class = "nav-link" href="about_me.html">About Me</a>
           </li>
-          <li class = "nav-item">
-            <a class = "nav-link" href="portfolio-page.html">Portfolio</a>
-          </li>
         </ul>
       </div>
-      <input id = "DarkLightToggle"type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
+      <input id = "DarkLightToggle" type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
     </nav>
     <!-- End Bar -->
 
@@ -65,19 +47,11 @@
 
     <!-- Body Begin -->
 
-    <div class="text-center mxbtn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-secondary active">
-        <input type="radio" name="options" id="software" onclick="showDiv('game-dev-projects')" autocomplete="off" checked> Software
-      </label>
-      <label class="btn btn-secondary">
-        <input type="radio" name="options" id="game-dev" onclick="showDiv('software-projects')" autocomplete="off"> Game Development
-      </label>
-      <label class="btn btn-secondary">
-        <input type="radio" name="options" id="3d-model" onclick="showDiv('3d-projects')" autocomplete="off"> 3D Modeling
-      </label>
-      <label class="btn btn-secondary">
-        <input type="radio" name="options" id="graphic-design" onclick="showDiv('graphic-projects')" autocomplete="off"> Graphic Design
-      </label>
+    <div class="text-center -btn-group" role="group">
+      <button class="btn btn-secondary" type="button" id="software" onclick="showDiv()" autocomplete="off" checked> Software </button>
+      <button class="btn btn-secondary" type="button" id="game-dev" autocomplete="off"> Game Development </button>
+      <button class="btn btn-secondary" type="button" id="three-dimension" autocomplete="off"> 3D Modeling </button>
+      <button class="btn btn-secondary" type="button" id="graphic-design" autocomplete="off"> Graphic Design </button>
     </div>
 
     <br>
@@ -238,7 +212,7 @@
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
         <p> Made using HTML, CSS, and Bootstrap</p>
         <!-- FIX: Use JS to display the current year date-->
-        <p> © 2023 </p>
+        <p> © 2024 </p>
       </div>    
     </footer>
     <!-- End Footer Box-->
@@ -251,5 +225,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+    <!-- Appearance Changes-->
+    <script src="Javascript/cards-change.js"></script>
+    <script src="Javascript/dark-light.js"></script>
   </body>
 </html>
