--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Body Begin -->
 
     <div class="text-center -btn-group" role="group">
-      <button class="btn btn-secondary" type="button" id="software" onclick="showDiv()" autocomplete="off" checked> Software </button>
+      <button onclick = "changeDiv('game-dev-projects')" class="btn btn-secondary" type="button" id="software" autocomplete="off" checked> Software </button>
       <button class="btn btn-secondary" type="button" id="game-dev" autocomplete="off"> Game Development </button>
       <button class="btn btn-secondary" type="button" id="three-dimension" autocomplete="off"> 3D Modeling </button>
       <button class="btn btn-secondary" type="button" id="graphic-design" autocomplete="off"> Graphic Design </button>
