Adding Dropdown for Projects

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
           <li class = "nav-item">
             <a class = "nav-link" href="about_me.html">About Me</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Projects </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/projects_pages/game-dev-projects.html">Game Development</a>
+              <a class="dropdown-item" href="/projects_pages/software-projects.html">Software</a>
+              <a class="dropdown-item" href="/projects_pages/3d-modeling-projects.html">3D Modeling</a>
+              <a class="dropdown-item" href="/projects_pages/graphic-design-projects.html">Graphic Design</a>
+            </div>
+          </li>
         </ul>
         <input id = "dark-light-event" type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
       </div>
